# apollo

./: .gitignore  ChangeLog.md  Dockerfile  LICENSE  README.md  apollo.cabal  debug.sh  docker-compose.yml  docker-push  mpd.conf  remote-deploy  remote-deploy.sh  runserver.sh  stack.yaml  test-async.sh  test.sh  testfuns
etc/: apollo.env
etc/systemd/system/: apollo.service
scripts/: apollo-export
src/: Main.hs
src/Apollo/: Api.hs  Archive.hs  Background.hs  Crypto.hs  Misc.hs  Monad.hs  Parser.hs  Reflection.hs  Server.hs  Track.hs  Transcoding.hs  Types.hs  YoutubeDl.hs
src/Apollo/Monad/: Types.hs
src/Apollo/Types/: Job.hs  Servant.hs
