name:                apollo
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Jacob Errington
maintainer:          apollo@mail.jerrington.me
copyright:           (c) Labcoders Club 2016
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

executable apollo
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -fprof-auto
  build-depends:
    aeson >=1.0 && <1.1,
    base >=4.9 && <4.10,
    bytestring >=0.10 && <0.11,
    cryptonite >=0.20 && <0.22,
    data-default-class >=0.1 && <0.2,
    directory >=1.2 && <1.3,
    filepath >=1.4 && <1.5,
    free >=4.12 && <4.13,
    http-api-data >=0.3 && <0.4,
    libmpd >=0.9 && <0.10,
    servant >=0.9 && <0.10,
    servant-server >=0.9 && <0.10,
    mtl >=2.2 && <2.3,
    process >=1.4 && <1.5,
    temporary >=1.2 && <1.3,
    text >=1.2 && <1.3,
    wai >=3.2 && <3.3,
    wai-extra >=3.0 && <3.1,
    warp >=3.2 && <3.3
