name:                apollo
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             MIT
license-file:        LICENSE
author:              Jacob Errington
maintainer:          apollo@mail.jerrington.me
copyright:           (c) Labcoders Club 2016
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

flag debug
  default: False

executable apollo
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -fprof-auto
    -fprint-expanded-synonyms

  if flag(debug)
    ghc-options:
      -O0

  other-modules:
    Apollo.Api
    Apollo.Archive
    Apollo.Crypto
    Apollo.Misc
    Apollo.Monad
    Apollo.Monad.Types
    Apollo.Reflection
    Apollo.Server
    Apollo.Track
    Apollo.Transcoding
    Apollo.Types
    Apollo.Types.Job
    Apollo.Types.Servant
    Apollo.YoutubeDl
    Apollo.Parser

  default-extensions:
    ConstraintKinds
    DataKinds
    DeriveFunctor
    DeriveFoldable
    DeriveTraversable
    FlexibleContexts
    FlexibleInstances
    GADTs
    GeneralizedNewtypeDeriving
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    RankNTypes
    RecordWildCards
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  build-depends:
    aeson >=1.0,
    async >=2.1,
    base >=4.9,
    binary >=0.8,
    bytestring >=0.10,
    containers >=0.5,
    cryptonite >=0.20,
    data-default-class >=0.1,
    directory >=1.2,
    filepath >=1.4,
    http-api-data >=0.3,
    http-types >=0.9,
    libmpd >=0.9,
    monad-control >=1.0,
    servant >=0.11,
    servant-server >=0.11,
    mtl >=2.2,
    network-uri >=2.6,
    process >=1.4,
    string-conversions >=0.4,
    tar >=0.5,
    temporary >=1.2,
    text >=1.2,
    transformers-base >=0.4,
    wai >=3.2,
    wai-extra >=3.0,
    warp >=3.2
